--- a/login/login.css
+++ b/login/login.css
@@ -1,6 +1,6 @@
 body {font-family: Arial, Helvetica, sans-serif;
 background-color:navy;
-background-image:
+background-image: url(Game_of_life.gif);
 }
 
 /* Full-width input fields */
@@ -15,13 +15,16 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-  background-color: #04AA6D;
-  color: white;
+  background-color: yellow;
+  color: black;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
   width: 100%;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 button:hover {
@@ -120,4 +123,9 @@ span.psw {
   .cancelbtn {
      width: 100%;
   }
+}
+h2{
+    color:#f44336;
+    text-align:center;
+    font-size:40px;
 }
