--- a/login/login.css
+++ b/login/login.css
@@ -1,4 +1,7 @@
-body {font-family: Arial, Helvetica, sans-serif;
+@import url('http://fonts.cdnfonts.com/css/rubber-biscuit');
+
+body {
+    font-family: 'Rubber Biscuit', sans-serif;
 background-color:navy;
 background-image: url(Game_of_life.gif);
 }
@@ -76,7 +79,7 @@ span.psw {
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #fefefea0;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
